--- a/AlphabetSoupCharity_Optimization.ipynb
+++ b/AlphabetSoupCharity_Optimization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,14 +163,14 @@
     "import tensorflow as tf\n",
     "\n",
     "#  Import and read the charity_data.csv.\n",
-    "import pandas as pd \n",
+    "import pandas as pd  \n",
     "application_df = pd.read_csv(\"charity_data.csv\")\n",
     "application_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,258 +680,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATUS</th>\n",
-       "      <th>ASK_AMT</th>\n",
-       "      <th>IS_SUCCESSFUL</th>\n",
-       "      <th>APPLICATION_TYPE_Other</th>\n",
-       "      <th>APPLICATION_TYPE_T10</th>\n",
-       "      <th>APPLICATION_TYPE_T19</th>\n",
-       "      <th>APPLICATION_TYPE_T3</th>\n",
-       "      <th>APPLICATION_TYPE_T4</th>\n",
-       "      <th>APPLICATION_TYPE_T5</th>\n",
-       "      <th>APPLICATION_TYPE_T6</th>\n",
-       "      <th>...</th>\n",
-       "      <th>INCOME_AMT_1-9999</th>\n",
-       "      <th>INCOME_AMT_10000-24999</th>\n",
-       "      <th>INCOME_AMT_100000-499999</th>\n",
-       "      <th>INCOME_AMT_10M-50M</th>\n",
-       "      <th>INCOME_AMT_1M-5M</th>\n",
-       "      <th>INCOME_AMT_25000-99999</th>\n",
-       "      <th>INCOME_AMT_50M+</th>\n",
-       "      <th>INCOME_AMT_5M-10M</th>\n",
-       "      <th>SPECIAL_CONSIDERATIONS_N</th>\n",
-       "      <th>SPECIAL_CONSIDERATIONS_Y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>108590</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6692</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>142590</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 44 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   STATUS  ASK_AMT  IS_SUCCESSFUL  APPLICATION_TYPE_Other  \\\n",
-       "0       1     5000              1                     0.0   \n",
-       "1       1   108590              1                     0.0   \n",
-       "2       1     5000              0                     0.0   \n",
-       "3       1     6692              1                     0.0   \n",
-       "4       1   142590              1                     0.0   \n",
-       "\n",
-       "   APPLICATION_TYPE_T10  APPLICATION_TYPE_T19  APPLICATION_TYPE_T3  \\\n",
-       "0                   1.0                   0.0                  0.0   \n",
-       "1                   0.0                   0.0                  1.0   \n",
-       "2                   0.0                   0.0                  0.0   \n",
-       "3                   0.0                   0.0                  1.0   \n",
-       "4                   0.0                   0.0                  1.0   \n",
-       "\n",
-       "   APPLICATION_TYPE_T4  APPLICATION_TYPE_T5  APPLICATION_TYPE_T6  ...  \\\n",
-       "0                  0.0                  0.0                  0.0  ...   \n",
-       "1                  0.0                  0.0                  0.0  ...   \n",
-       "2                  0.0                  1.0                  0.0  ...   \n",
-       "3                  0.0                  0.0                  0.0  ...   \n",
-       "4                  0.0                  0.0                  0.0  ...   \n",
-       "\n",
-       "   INCOME_AMT_1-9999  INCOME_AMT_10000-24999  INCOME_AMT_100000-499999  \\\n",
-       "0                0.0                     0.0                       0.0   \n",
-       "1                1.0                     0.0                       0.0   \n",
-       "2                0.0                     0.0                       0.0   \n",
-       "3                0.0                     1.0                       0.0   \n",
-       "4                0.0                     0.0                       1.0   \n",
-       "\n",
-       "   INCOME_AMT_10M-50M  INCOME_AMT_1M-5M  INCOME_AMT_25000-99999  \\\n",
-       "0                 0.0               0.0                     0.0   \n",
-       "1                 0.0               0.0                     0.0   \n",
-       "2                 0.0               0.0                     0.0   \n",
-       "3                 0.0               0.0                     0.0   \n",
-       "4                 0.0               0.0                     0.0   \n",
-       "\n",
-       "   INCOME_AMT_50M+  INCOME_AMT_5M-10M  SPECIAL_CONSIDERATIONS_N  \\\n",
-       "0              0.0                0.0                       1.0   \n",
-       "1              0.0                0.0                       1.0   \n",
-       "2              0.0                0.0                       1.0   \n",
-       "3              0.0                0.0                       1.0   \n",
-       "4              0.0                0.0                       1.0   \n",
-       "\n",
-       "   SPECIAL_CONSIDERATIONS_Y  \n",
-       "0                       0.0  \n",
-       "1                       0.0  \n",
-       "2                       0.0  \n",
-       "3                       0.0  \n",
-       "4                       0.0  \n",
-       "\n",
-       "[5 rows x 44 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4l/8gsgh5l12wgfd7nl1f5cykh00000gn/T/ipykernel_53210/1796370687.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  application_df = application_df.merge(encode_df, left_index=True, right_index=True).drop(application_cat, 1)\n"
+     ]
     }
    ],
    "source": [
     "# Merge one-hot encoded features and drop the originals\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df = application_df.merge(encode_df, left_index=True, right_index=True).drop(application_cat, 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
+    "X = application_df.drop('IS_SUCCESSFUL', axis=1).values\n",
+    "y = application_df['IS_SUCCESSFUL'].values\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,23 +739,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_10\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 80)                3520      \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 30)                2430      \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 31        \n",
+      " dense_28 (Dense)            (None, 6)                 264       \n",
+      "                                                                 \n",
+      " dense_29 (Dense)            (None, 2)                 14        \n",
+      "                                                                 \n",
+      " dense_30 (Dense)            (None, 1)                 3         \n",
+      "                                                                 \n",
       "=================================================================\n",
-      "Total params: 5,981\n",
-      "Trainable params: 5,981\n",
+      "Total params: 281\n",
+      "Trainable params: 281\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -981,18 +771,20 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "number_input_features = len(X_train_scaled[0])\n",
+    "hidden_nodes_layer1 = 6\n",
+    "hidden_nodes_layer2 = 2\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"sigmoid\"))\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -1000,33 +792,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "fit_model = nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 0s - loss: 0.7045 - accuracy: 0.5343 - 163ms/epoch - 608us/step\n",
+      "Loss: 0.7045077085494995, Accuracy: 0.5343440175056458\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model using the test data\n",
     "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimization, editing model\n",
+    "# 5 & 3\n",
+    "# 2 & 6\n",
+    "# 6 & 2 showed improvement. going to try tanh\n",
+    "#slight boost w tanh going to try more\n",
+    "# linear = .73 / .54\n",
+    "#sigmoid = .70 / .53\n"
    ]
   },
   {
